<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                tools:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                tools:text="@string/brawl_stars" />

            <Button
                android:id="@+id/launchButton"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch" />

        </LinearLayout>

        <TextView
            android:id="@+id/scFilesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            tools:text="@string/event_files_found" />

        <TextView
            android:id="@+id/scFilesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textIsSelectable="true"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            tools:text="@string/mewgenics_long" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>